refactor: apply JDK 17 idioms to annotation-processor and plutus-aiken
Use pattern matching instanceof, switch expressions, List.copyOf(), and Stream.toList() across both modules to replace Java 11-era casts, switch statements, and Collectors.toList() calls.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>